--- a/res/THANKS
+++ b/res/THANKS
@@ -1,4 +1,4 @@
-感谢以下人员对BiliLocal做出的贡献
+﻿感谢以下人员对BiliLocal做出的贡献
 
 Chaserhkj:
 搜索窗口
@@ -14,6 +14,11 @@ Mac OS版本编译
 
 hungkie(samlls):
 阻止屏幕变暗或关闭
+
+从未碰过Qt的一般路人（BilibiliUID24022863）:
+添加了文档；更新了加载B站在线弹幕的API；确认libvlc-3.0.9.2在加载中文srt字幕时候不会出现方块乱码；修改命令行相关逻辑，使得单个命令行也能一次性同时加载视频、弹幕和字幕，以及修复了即使勾选了重新载入弹幕时清空，由于命令行先加载了视频导致对应弹幕池被加载一遍，然后命令行再加载一遍弹幕的时候没有清空之前的弹幕的问题；修改播放列表逻辑，不仅视频加载的弹幕文件能被记忆，加载了什么字幕文件也能被记忆下来了；修改了进程间通信的代码，因为我编译出来的总是触发蜜汁bug没法正常通信。
+还有……
+感觉不如Java和C++/C(Win32API)混写……开发体验……
 
 BiliLocal使用了以下库和插件
 
